--- a/crud-tickets/createTicket/package.json
+++ b/crud-tickets/createTicket/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1662.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.15.0",
     "uuid": "^10.0.0"
   }
